--- a/education.html
+++ b/education.html
@@ -27,6 +27,7 @@
   <div class="row">
     <div class="col-md-4 col-lg-2 col-sm-5 lef3p">
         <div class="l3p1"><a href="index.html">Personal Info</a></div>
+        <div class="l3p6"><a href="summary.html">Summary</a></div>
         <div class="l3p2"><a href="experience.html">Experience</a></div>
         <div class="l3p3"><a href="#">Education</a></div>
         <div class="l3p4"><a href="skills.html">Skills</a></div>
@@ -35,7 +36,7 @@
     <div class="col-lg-1 d-none d-xl-block">
         <div class="vl"></div>
     </div>
-    <div class="col-md-8 col-lg-8 col-sm-12 f3or1">
+    <div class="col-md-8 col-lg-8 col-offset-sm-4 f3or1">
     <h>Education</h>
     <form>
       <div class="form-row co3fi">
