--- a/experience.html
+++ b/experience.html
@@ -27,6 +27,7 @@
   <div class="row">
     <div class="col-md-4 col-lg-2 col-sm-5 lef2p">
         <div class="l2p1"><a href="index.html">Personal Info</a></div>
+        <div class="l2p6"><a href="summary.html">Summary</a></div>
         <div class="l2p2"><a href="#">Experience</a></div>
         <div class="l2p3"><a href="education.html">Education</a></div>
         <div class="l2p4"><a href="skills.html">Skills</a></div>
@@ -74,7 +75,7 @@
         <label for="Description">Description</label>
         <textarea class="form-control" rows="3"></textarea>
       </div>
-      <div class="form-row">
+      <div class="form-row  mdbt">
         <div class="col-lg-5 col-md-4 col-sm-4">
             <button type="button" class="btn btn-lg btn-outline-secondary b2tl"><i class="fas fa-arrow-left"></i> Back</button>
         </div>
