--- a/skills.html
+++ b/skills.html
@@ -27,6 +27,7 @@
   <div class="row">
     <div class="col-md-4 col-lg-2 col-sm-5 lef4p">
         <div class="l4p1"><a href="index.html">Personal Info</a></div>
+        <div class="l4p6"><a href="summary.html">Summary</a></div>
         <div class="l4p2"><a href="experience.html">Experience</a></div>
         <div class="l4p3"><a href="education.html">Education</a></div>
         <div class="l4p4"><a href="#">Skills</a></div>
@@ -62,7 +63,7 @@
           <span>Level</span><input type="text" class="form-control" placeholder="eg. 40%">
         </div>
       </div>
-      <div class="form-row">
+      <div class="form-row mdbt">
         <div class="col-lg-5 col-md-4 col-sm-6">
             <button type="button" class="btn btn-lg btn-outline-secondary b4tl"><i class="fas fa-arrow-left"></i> Back</button>
         </div>
